test/kubernetes/e2e/features/transformation/testdata/transform-for-body-as-string.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body-as-string
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-for-body.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-body-as-string
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body-as-string
  transformation:
    response:
      set:
        - name: "x-how-great"
          value: "level_{%- if headers != \"\" -%}{{headers.X-Incoming-Stuff.0}}{% else %}unknown{% endif %}"
      body:
        value: "{{headers}}" # use the parsed body of the returned format (pull from input headers as returned by echo service)
